--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,9 @@ dependencies {
     implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '3.3.3'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '3.3.2'
     implementation group: 'com.atlascopco', name: 'hunspell-bridj', version: '1.0.4'
+//    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '3.3.4'
 }
 
 tasks.named('test') {
